# dep-porter

./: .gitignore  CHANGELOG_POM_SUPPORT.md  Cargo.toml  Dockerfile.downloader  POM_SUPPORT.md  README.md  SKILL.md  config.example.toml  dep-porter-pom.sh  pom.example.xml
.github/workflows/: build-release.yml  docker-publish.yml
scripts/: download.sh
src/: batch.rs  cli.rs  config.rs  docker.rs  import.rs  lib.rs  license.rs  main.rs  manifest.rs  model.rs  pom.rs  registry.rs  security.rs  util.rs
tests/: docker_e2e.rs  e2e.rs  manifest_e2e.rs
