[package]
name = "dep-porter"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to download dependencies from the internet and import them into an air-gapped Nexus repository."
authors = ["dep-porter contributors"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1"
thiserror = "1"
which = "7"
walkdir = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
