[package]
name = "dep-porter"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to download dependencies from the internet and import them into an air-gapped Nexus repository."
authors = ["dep-porter contributors"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
reqwest = { version = "0.13.4", features = ["blocking", "json", "multipart"] }
anyhow = "1"
thiserror = "2.0.18"
which = "8.0.4"
walkdir = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
