[package]
name = "dep-porter"
version = "1.5.0"
edition = "2021"
description = "A CLI tool to download dependencies from the internet and import them into an air-gapped Nexus repository."
authors = ["dep-porter contributors"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2+spec-1.1.0"
reqwest = { version = "0.13.4", features = ["blocking", "json", "multipart"] }
anyhow = "1"
thiserror = "2.0.18"
which = "8.0.4"
walkdir = "2"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
tar = "0.4"
sha1 = "0.11.0"
sha2 = "0.11.0"
base64 = "0.22"
indicatif = "0.18.6"
roxmltree = "0.20"

[dev-dependencies]
tempfile = "3"
flate2 = "1"
tar = "0.4"
serde_json = "1"
reqwest = { version = "0.13.4", features = ["blocking"] }
